--- a/website_school_management/views/programmes.xml
+++ b/website_school_management/views/programmes.xml
@@ -5,6 +5,10 @@
     <!-- //                     LISTE PROGRAMMES                       // -->
     <!-- //////////////////////////////////////////////////////////////// -->
 
+    <template id="open_accordion">
+    </template>
+    <template id="close_accordion">
+    </template>
     <!-- TODO à adapter -->
     <template id="programmes_liste">
         <t t-call="website.layout"> <!-- Affiche le layout du site web -->
@@ -12,67 +16,41 @@
                 <div class="row">
                     <div class="col-12">
                         <t t-set="title">Programmes</t>
-                        <h1 t-esc="title"/>
-                        <div class="my-4">
+                        <h1 class="mb-3" t-esc="title"/>
+                        <div class="mt-4">
                             <div class="oe_structure" />
                             <t t-call="website_school_management.programmes_breadcrumb"/>
                             <div class="breadcrumb_next_step">
-                                <span class="fw-bold">Aller à :</span>
+                                <span class="fw-bold">Filtrer :</span>
                                 <t t-foreach="options" t-as="option">
-                                    <a t-att-title="'Aller à ' + option['name']" class="btn btn-outline-primary btn-sm" t-att-href="option ['uri']"><t t-esc="option['name']" /></a>
+                                    <a t-att-title="'Filtrer ' + option['name']" class="btn btn-outline-primary btn-sm fw-bold" t-att-href="option ['uri']"><t t-esc="option['name']" /></a>
                                 </t>
                             </div>
-                            <hr/>
+                            <hr class="mt-5 mb-0"/>
                         </div>
                     </div> 
                     <div class="col-12">
                         <t t-set="current_cycle" t-value="False"/>
                         <t t-set="d" t-value="False"/>
                         <t t-set="c" t-value="False"/>
-                        <!--<t t-foreach="program_list" t-as="program">
-                            <h3 t-if="d != program.domain_name"><t t-esc="program.domain_name" /></h3>
-                            <t t-if="d != program.domain_name" t-call="open_accordion" />
-                            <a class="d-block ps-5" t-att-href="program.program_uri"><t t-esc="program.name" /></a>
-                            <t t-if="d != program.domain_name" t-call="close_accordion" />
-                            <t t-set="d" t-value="program.domain_name"/>
-                        </t>
-                        <hr/>-->
-                        <div class="accordion">
-                            <t t-foreach="program_list" t-as="program">
-                                <t t-if="(((current_cycle != False) and (current_cycle != program.cycle_id.id)))">
-                                    <p>fin liste</p>
-                                    <!--</div>-->
-                                    &lt;/div &gt;
-                                    &lt;/div &gt;
-                                </t>
-                                <t t-if="d != program.domain_name">
-                                    <h3><t t-esc="program.domain_name" /></h3>
-                                    <t t-set="d" t-value="program.domain_name"/>
-                                    <t t-set="c" t-value="False"/>
-                                </t>
-                                <t t-if="c != program.cycle_id">
-                                &lt;div class="accordion-item" &gt;
-                                    <h4 class="accordion-header ps-3">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-        <t t-esc="program.cycle_id.name" />
-      </button></h4>
-                                    <t t-set="c" t-value="program.cycle_id"/>
-                                </t>
-                                <t t-if="(current_cycle == False) or (current_cycle != program.cycle_id.id)">
-                                    &lt;div class="accordion-collapse collapse" &gt;
-                                    <p>Début liste</p>
-                                    <!--<div class="accordion-collapse collapse">-->
-                                </t>
-                                <a class="d-block ps-5" t-att-href="program.program_uri"><t t-esc="program.name" /></a>
-                                <t t-set="current_cycle" t-value="program.cycle_id.id"/>
-                                <t t-if="program_index == (len(program_list) - 1)">
-                                    <p>fin liste</p>
-                                    <!--</div>-->
-                                    &lt;/div &gt;
-                                    &lt;/div &gt;
-                                </t>
+                        <t t-foreach="program_list" t-as="program">
+                            <t t-if="(((current_cycle != False) and (current_cycle != program.cycle_id.id)))" t-call="website_school_management.close_list" />
+                            <t t-if="d != program.domain_name">
+                                <h3 class="mt-5" t-esc="program.domain_name" />
+                                <t t-set="d" t-value="program.domain_name"/>
+                                <t t-set="c" t-value="False"/>
                             </t>
-                        </div> 
+                            <t t-if="c != program.cycle_id">
+                                <h4 class="ps-3 mt-4 mb-3" t-esc="program.cycle_id.name" />
+                                <t t-set="c" t-value="program.cycle_id"/>
+                            </t>
+                            <t t-if="(current_cycle == False) or (current_cycle != program.cycle_id.id)" t-call="website_school_management.open_list" />
+                            <li class="list-group-item">
+                                <a t-att-href="program.program_uri" t-esc="program.name" />
+                            </li>
+                            <t t-set="current_cycle" t-value="program.cycle_id.id"/>
+                            <t t-if="program_index == (len(program_list) - 1)" t-call="website_school_management.close_list" />
+                        </t>
                     </div> 
                 </div>    
             </div>    
@@ -357,7 +335,7 @@
 
     <template id="programmes_breadcrumb">
         <t t-if="len(breadcrumb) != 1">
-            <div class="breadcrumb">
+            <div class="breadcrumb mb-4">
                 <t t-set="count" t-value="1" />
                 <t t-foreach="breadcrumb" t-as="breadcrumb_item">
                     <t t-if="count &lt; len(breadcrumb)">
@@ -371,6 +349,17 @@
             </div>
         </t>
     </template>
+
+    <!-- //////////////////////////////////////////////////////////////// -->
+    <!-- //                             LIST                           // -->
+    <!-- //////////////////////////////////////////////////////////////// -->
     
+    <template id="open_list">
+        &lt;ul class="ps-3 ps-sm-5 list-group"&gt;
+    </template>
+
+    <template id="close_list">
+        &lt;/ul&gt;
+    </template>
     
 </odoo>
