--- a/website_school_management/static/src/scss/base.scss
+++ b/website_school_management/static/src/scss/base.scss
@@ -77,3 +77,9 @@
     flex-wrap: wrap;
     gap: 0.4em 0.6em;
 }
+.w-fit-content {
+    width: fit-content;
+}
+.h-fit-content {
+    height: fit-content;
+}
