Horizon and CRLG Portal structure and content

--- a/website_school_portal/views/footer.xml
+++ b/website_school_portal/views/footer.xml
@@ -21,12 +21,15 @@
 ##############################################################################
 -->
 <odoo>
-    <template id="copyright" inherit_id="website.layout" name="School Portal Copyright">
+    <template id="hz_copyright" inherit_id="website.layout" name="Horizon Copyright">
         <xpath expr="//footer//div[hasclass('o_footer_copyright')]" position="replace">
             <div t-if="not no_copyright" class="o_footer_copyright">
                 <div class="container py-3">
                     <div class="row">
-                        <div class="col-sm text-center text-sm-end text-muted">
+                        <div class="col-12 col-md-6 text-center text-md-start text-muted hz_footer_brand_name">
+                            <span><strong>Horizon</strong> - High School Management for Odoo</span>
+                        </div>
+                        <div class="col-12 col-md-6 text-center text-sm-end text-muted hz_copyright">
                             <span class="me-2">Copyright &amp;copy; <span t-esc="time.strftime('%Y')" /> Ito-Invest &amp; Neodiensis</span>
                         </div>
                     </div>
@@ -35,52 +38,40 @@
         </xpath>
     </template>
 
-    <template id="footer" inherit_id="website.layout" name="School Portal Footer">
+    <template id="hz_footer" inherit_id="website.layout" name="Horizon Footer">
         <xpath expr="//div[@id='footer']" position="replace">
             <div id="footer" t-if="not no_footer">
                 <section class="s_text_block pt40 pb16" data-snippet="s_text_block" data-name="Text">
                     <div class="container">
                         <div class="row">
                             <div class="col-lg-2 pt24 pb24">
-                                <h5 class="mb-3">Useful Links</h5>
+                                <h5 class="mb-3">Liens utiles</h5>
                                 <ul class="list-unstyled">
                                     <t t-set="configurator_footer_links" t-value="[]"/>
                                     <li t-foreach="configurator_footer_links" t-as="link">
                                         <a t-att-href="link['href']" t-esc="link['text']"/>
                                     </li>
-                                    <li><a href="/contactus">Contact us</a></li>
+                                    <li><a href="/contactus">Nous contacter</a></li>
                                 </ul>
                             </div>
-                            <div class="col-lg-5 pt24 pb24">
-                                <t t-call="website_school_portal.custom_footer_description" />
+                            <div class="col-lg-5 pt24 pb24" >
+                                <t t-call="website_school_portal._hz_custom_footer_description" />
                             </div>
                             <div id="connect" class="col-lg-4 offset-lg-1 pt24 pb24">
                                 <h5 class="mb-3"><t t-esc="res_company.name"/></h5>
-
                                 <ul class="list-unstyled">
                                     <li><i class="fa fa-map-signs fa-fw me-2 mt-2 align-top"/><div class="d-inline-block">
                                         <t t-esc="res_company.street" /><br/>
                                         <t t-esc="res_company.zip" />&amp;nbsp;<t t-esc="res_company.city" /><br/>
                                         <t t-esc="res_company.country_id.name" />
                                     </div></li>
-                                    <!--<li><i class="fa fa-comment fa-fw me-2"/><span><a href="/contactus">Contact us</a></span></li>-->
                                     <li><i class="fa fa-envelope fa-fw me-2"/><span><a t-att-href="'mailto:'+res_company.email"><t t-esc="res_company.email" /></a></span></li>
                                     <li><i class="fa fa-phone fa-fw me-2"/><span class="o_force_ltr"><a t-att-href="'tel:'+res_company.phone"><t t-esc="res_company.phone" /></a></span></li>
                                 </ul>
+                                <hr/>
                                 <div class="s_social_media text-start o_not_editable" data-snippet="s_social_media" data-name="Social Media" contenteditable="false">
                                     <h5 class="s_social_media_title d-none" contenteditable="true">Follow us</h5>
-                                    <a href="/website/social/facebook" class="s_social_media_facebook" target="_blank">
-                                        <i class="fa fa-facebook rounded-circle shadow-sm"/>
-                                    </a>
-                                    <a href="/website/social/twitter" class="s_social_media_twitter" target="_blank">
-                                        <i class="fa fa-twitter rounded-circle shadow-sm"/>
-                                    </a>
-                                    <a href="/website/social/linkedin" class="s_social_media_linkedin" target="_blank">
-                                        <i class="fa fa-linkedin rounded-circle shadow-sm"/>
-                                    </a>
-                                    <a href="/" class="text-800">
-                                        <i class="fa fa-home rounded-circle shadow-sm"/>
-                                    </a>
+                                    <t t-call="website_school_portal.hz_socials" />
                                 </div>
                             </div>
                         </div>
@@ -90,12 +81,23 @@
         </xpath>
     </template>
 
-    <!-- Zones éditables -->
-    <template id="website_school_portal.custom_footer_description" name="Scool Footer Description"> 
-        <div class="oe_structure">
-            <h5>Presentation</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquam, tellus porta gravida sodales, nibh felis sagittis massa, at gravida quam nisi et tortor. <br/>Etiam interdum elit velit, vel convallis augue porttitor et. In in metus tempus nulla venenatis pharetra ut ac urna. In hac habitasse platea dictumst. Morbi facilisis id tellus a tempus. Vivamus fringilla at urna eu tempor. Sed ac ultrices erat. Nullam vitae molestie sem, vel aliquet quam. Curabitur augue dui, scelerisque a neque id, iaculis suscipit orci. Suspendisse potenti. Cras hendrerit felis vel feugiat pharetra. <br/>Curabitur vestibulum nunc at varius fermentum. In at lacinia enim, vel blandit ligula.</p>
-        </div>
+
+    <template id="hz_socials" name="Horizon Social Networks"> 
+        <a t-if="res_company.social_facebook != False" t-att-href="res_company.social_facebook" class="s_social_media_facebook" target="_blank">
+            <i class="fa fa-facebook rounded-circle shadow-sm"/>
+        </a>
+        <a t-if="res_company.social_twitter != False" t-att-href="res_company.social_twitter" class="s_social_media_twitter" target="_blank">
+            <i class="fa fa-twitter rounded-circle shadow-sm"/>
+        </a>
+        <a t-if="res_company.social_youtube != False" t-att-href="res_company.social_youtube" class="s_social_media_youtube" target="_blank">
+            <i class="fa fa-youtube rounded-circle shadow-sm"/>
+        </a>
+        <a t-if="res_company.social_instagram != False" t-att-href="res_company.social_instagram" class="s_social_media_instagram" target="_blank">
+            <i class="fa fa-instagram rounded-circle shadow-sm"/>
+        </a>
+        <a t-if="res_company.social_linkedin != False" t-att-href="res_company.social_linkedin" class="s_social_media_linkedin" target="_blank">
+            <i class="fa fa-linkedin rounded-circle shadow-sm"/>
+        </a>
     </template>
     
 </odoo>
