--- a/website_school_portal/views/main.xml
+++ b/website_school_portal/views/main.xml
@@ -21,7 +21,13 @@
 ##############################################################################
 -->
 <odoo>
-    <template id="to-start" name="To start...">
-
+    <template id="hz_home" inherit_id="website.homepage" name="Horizon Home Page">
+        <xpath expr="//div[@id='wrap']" position="replace">
+            <div id="wrap">
+                <t t-call="website_school_portal._hz_custom_home_banner" />
+                <hr />
+                <t t-call="website_school_portal._hz_custom_home_content" />
+            </div>
+        </xpath>
     </template>
 </odoo>
