--- a/website_school_management/views/programmes.xml
+++ b/website_school_management/views/programmes.xml
@@ -14,7 +14,7 @@
                         <div class="mt-4">
                             <t t-call="website_school_management.programmes_breadcrumb"/>
                             <div class="breadcrumb_next_step">
-                                <span class="fw-bold">Sélectionner :</span>
+                                <span class="fw-bold d-flex align-items-center"><i class="fa fa-filter fs-4 me-1 text-primary" aria-hidden="true"></i>Sélectionner :</span>
                                 <t t-foreach="options" t-as="option">
                                     <a t-att-title="'Sélectionner ' + option['name']" class="btn btn-outline-primary btn-sm fw-bold" t-att-href="option ['uri']"><t t-esc="option['name']" /></a>
                                 </t>
@@ -63,8 +63,8 @@
                         <div class="container">
                             <h1 t-esc="title"/>
                             <p class="my-3">Aucun programme de cours correspondant à vos critères n'a été trouvé.</p>
-                            <hr/>
-                            <p class="text-center"><a href="/programmes">Retour à la recherche</a></p>
+                            <hr class="mt-4"/>
+                            <p class="text-center"><a href="/programmes">Retour à la liste des programmes</a></p>
                         </div>
                     </div> 
                 </div>    
@@ -100,93 +100,196 @@
         </t>
     </template>
 
-    <!-- TODO à adapter -->
    <template id="programme_details_contenu" name="Program Details Content">
-        <dl class="d-flex flex-wrap pt-2 mb-5">
+        <dl class="d-flex flex-wrap pt-2 mb-4">
             <div class="flex-grow-1">
-                <dt class="border text-center d-block w-100 py-2 px-3 o_cc5">DOMAINE</dt>
+                <dt class="border text-center d-block w-100 py-2 px-3 o_cc5">Domaine</dt>
                 <dd class="border text-center border-top-0 d-block w-100 py-2 px-3 mb-3" t-esc="program.domain_name" />
             </div>
             <div class="flex-grow-1">
-                <dt class="border text-center d-block w-100 py-2 px-3 o_cc5">CYCLE</dt>
+                <dt class="border text-center d-block w-100 py-2 px-3 o_cc5">Cycle</dt>
                 <dd class="border text-center border-top-0 d-block w-100 py-2 px-3 mb-3" t-esc="program.cycle_id.name" />
             </div>
             <div class="flex-grow-1">
-                <dt class="border text-center d-block w-100 py-2 px-3 o_cc5">SECTION</dt>
+                <dt class="border text-center d-block w-100 py-2 px-3 o_cc5">Section</dt>
                 <dd class="border text-center border-top-0 d-block w-100 py-2 px-3 mb-3" t-esc="program.speciality_id.section_id.name" />
             </div>
             <div class="flex-grow-1">
-                <dt class="border text-center d-block w-100 py-2 px-3 o_cc5">ORIENTATION</dt>
+                <dt class="border text-center d-block w-100 py-2 px-3 o_cc5">Orientation</dt>
                 <dd class="border text-center border-top-0 d-block w-100 py-2 px-3 mb-3" t-esc="program.speciality_id.track_id.name" />
             </div>
             <div class="flex-grow-1">
-                <dt class="border text-center d-block w-100 py-2 px-3 o_cc5">SPÉCIALITÉ</dt>
+                <dt class="border text-center d-block w-100 py-2 px-3 o_cc5">Spécialité</dt>
                 <dd class="border text-center border-top-0 d-block w-100 py-2 px-3 mb-3" t-esc="program.speciality_id.name" />
             </div>
         </dl>
         <div t-if="program.description">
             <h2 class="mb-4">Vade-mecum</h2>
-            <p><t t-esc="program.description"/></p>
-            <hr/>
+            <p t-esc="program.description"/>
         </div>
+            <hr class="my-4"/>
         <div>
             <h2 class="mb-4">Programme des cours</h2>
-            <div t-foreach="program.bloc_ids" t-as="bloc">
-                <t t-call="website_school_management.school_bloc_contenu"/>
+            <div class="accordion -accordion-program_detail" id="program_detail">
+                <div t-foreach="program.bloc_ids" t-as="bloc">
+                    <t t-call="website_school_management.school_bloc_contenu"/>
+                </div>
             </div>
         </div>
-        <hr class="my-5"/>
     </template>
 
-    <!-- TODO à adapter -->
     <template id="school_bloc_contenu" name="Bloc">
-        <div>
-            <h5>Grille du bloc - <t t-esc="bloc.name"/></h5>
-            <div>
-                <div>
+        <div class="accordion-item border mb-4">
+            <h3 class="accordion-header">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" t-attf-data-bs-target="#collapse{{bloc.id}}" aria-expanded="true" t-attf-aria-controls="collapse{{bloc.id}}">
+                        <div class="d-flex flex-column">
+                            <span class="fs-2"><t t-esc="bloc.name"/></span>
+                            <div class="mt-2 d-flex gap-2">
+                                <span>
+                                    Heures&amp;nbsp;: 
+                                    <span class="fw-bold text-primary" t-esc="bloc.total_hours"/>
+                                </span>
+                                <span>|</span>
+                                <span>
+                                    ECTS&amp;nbsp;: 
+                                    <span class="fw-bold text-primary" t-esc="bloc.total_credits"/>
+                                </span>
+                            </div>
+                        </div>
+                </button>
+            </h3>
+            <div t-attf-id="collapse{{bloc.id}}" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#program_detail">
+                <div class="accordion-body border-top pt-0">
                     <t t-set="course_group_group" t-value=""/>
                     <!-- Groupes de cours -->
                     <t t-foreach="bloc.course_group_ids.sorted(key=lambda r: r.cg_grouping_sequence)" t-as="course_group">
                         <!-- Groupe du groupe de cours -->
                         <t t-if="course_group.cg_grouping.id and course_group.cg_grouping.id != course_group_group">
-                            <hr/>
-                            <h6>Groupe des groupes de cours : <t t-esc="course_group.cg_grouping.name"/></h6>
-                            <hr/>
+                            <h4 class="mt-5" t-esc="course_group.cg_grouping.name"/>
                         </t>
                         <t t-set="course_group_group" t-value="course_group.cg_grouping.id"/>
-                        <ul>
-                            <!-- Groupe de cours -->
-                            <li>Code : <t t-esc="course_group.ue_id"/></li>
-                            <li>Unités d’enseignement (groupe de cours) : <a t-esc="course_group.title" t-att-href="'/groupe_de_cours/%s' % slug(course_group)" target="_self"/></li>
-                            <li>Professeur : <t t-esc="course_group.responsible_id.name"/></li>
-                            <li>Heures : <t t-esc="course_group.total_hours"/></li>
-                            <li>ECTS : <t t-esc="course_group.total_credits"/></li>
-                            <li>Pré-requis : <t t-if="course_group.pre_requisit_ids"><span t-esc="', '.join(map( lambda x: str(x.preriquisit_id.uid), course_group.pre_requisit_ids))"/></t></li>
-                            <li>Co-requis : <t t-if="course_group.co_requisit_ids"><span t-esc="', '.join(map( lambda x: str(x.coriquisit_id.uid), course_group.co_requisit_ids))"/></t></li>
-                            <li>Obligatoire : <t t-if="course_group.mandatory">Oui</t><t t-if="not(course_group.mandatory)">Non</t></li>
-                            <!-- Liste de cours -->
-                            <li>Cours : 
-                                <t t-foreach="course_group.course_ids" t-as="course">
-                                    <ul>
-                                        <li>Nom : <a t-esc="course.title" t-att-href="'/cours/%s' % slug(course)" target="new"/></li>
-                                        <li>Heures : <t t-esc="course.hours"/></li>
-                                        <li>ECTS : <t t-esc="course.credits"/></li>
-                                        <li>Pondération : <t t-esc="course.weight"/></li>
-                                        <li>Quadri : <t t-esc="course.quadri"/></li>
-                                    </ul>
-                                    <br/>
-                                </t>
-                            </li>
-                            <hr/>
-                        </ul>
+                        <h5 class="group-title w-fit-content border border-bottom-0 d-flex flex-wrap gap-2 mt-5 mb-0 py-2 px-4">
+                            Unités d’enseignement&amp;nbsp;: <a class="link-primary d-block p-0" t-esc="course_group.title" t-att-href="'/groupe_de_cours/%s' % slug(course_group)" target="_self"/>
+                        </h5>
+                        <div class="p-3 mb-4 border">
+                            <div class="px-3">
+                                <div class="table-responsive mt-3 mb-4">
+                                    <div class="table-row header o_cc5">
+                                        <div class="cell border">
+                                            Code
+                                        </div>
+                                        <div class="cell border">
+                                            Professeur
+                                        </div>
+                                        <div class="cell border">
+                                            Heures
+                                        </div>
+                                        <div class="cell border">
+                                            ECTS
+                                        </div>
+                                        <div class="cell border">
+                                            Pré-requis
+                                        </div>
+                                        <div class="cell border">
+                                            Co-requis
+                                        </div>
+                                        <div class="cell border">
+                                            Obligatoire
+                                        </div>
+                                    </div>
+                                    <div class="table-row">
+                                        <div class="cell border" data-title="Code">
+                                            <span class="cell-value">
+                                                <t t-esc="course_group.ue_id"/>
+                                            </span>
+                                        </div>
+                                        <div class="cell border" data-title="Professeur">
+                                            <span class="cell-value">
+                                                <t t-esc="course_group.responsible_id.name"/>
+                                            </span>
+                                        </div>
+                                        <div class="cell border" data-title="Heures">
+                                            <span class="cell-value">
+                                                <t t-esc="course_group.total_hours"/>
+                                            </span>
+                                        </div>
+                                        <div class="cell border" data-title="ECTS">
+                                            <span class="cell-value">
+                                                <t t-esc="course_group.total_credits"/>
+                                            </span>
+                                        </div>
+                                        <div class="cell border" data-title="Pré-requis">
+                                            <span class="cell-value">
+                                                <t t-if="course_group.pre_requisit_ids"><span t-esc="', '.join(map( lambda x: str(x.preriquisit_id.uid), course_group.pre_requisit_ids))"/></t>
+                                            </span>
+                                        </div>
+                                        <div class="cell border" data-title="Co-requis">
+                                            <span class="cell-value">
+                                                <t t-if="course_group.co_requisit_ids"><span t-esc="', '.join(map( lambda x: str(x.coriquisit_id.uid), course_group.co_requisit_ids))"/></t>
+                                            </span>
+                                        </div>
+                                        <div class="cell border" data-title="Obligatoire">
+                                            <span class="cell-value">
+                                                <t t-if="course_group.mandatory">Oui</t><t t-if="not(course_group.mandatory)">Non</t>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr class="d-md-none mb-5" />
+                            <div class="block-cours">
+                                <h6 class="fs-5">Cours</h6>
+                                <div class="table-responsive mb-3">
+                                    <div class="table-row header o_cc5">
+                                        <div class="cell border">
+                                            Nom
+                                        </div>
+                                        <div class="cell border">
+                                            Heures
+                                        </div>
+                                        <div class="cell border">
+                                            ECTS
+                                        </div>
+                                        <div class="cell border">
+                                            Pondération
+                                        </div>
+                                        <div class="cell border">
+                                            Quadri
+                                        </div>
+                                    </div>
+                                    <t t-foreach="course_group.course_ids" t-as="course">
+                                        <div class="table-row">
+                                            <div class="cell border" data-title="Nom">
+                                                <span class="cell-value">
+                                                    <a class="link-primary p-0" t-esc="course.title" t-att-href="'/cours/%s' % slug(course)" target="new"/>
+                                                </span>
+                                            </div>
+                                            <div class="cell border" data-title="Heures">
+                                                <span class="cell-value">
+                                                    <t t-esc="course.hours"/>
+                                                </span>
+                                            </div>
+                                            <div class="cell border" data-title="ECTS">
+                                                <span class="cell-value">
+                                                    <t t-esc="course.credits"/>
+                                                </span>
+                                            </div>
+                                            <div class="cell border" data-title="Pondération">
+                                                <span class="cell-value">
+                                                    <t t-esc="course.weight"/>
+                                                </span>
+                                            </div>
+                                            <div class="cell border" data-title="Quadri">
+                                                <span class="cell-value">
+                                                    <t t-esc="course.quadri"/>
+                                                </span>
+                                            </div>
+                                        </div>
+                                    </t>
+                                </div>
+                            </div>    
+                        </div>
                     </t>
-                    <!-- Total -->
-                    <p>Total :</p>
-                    <ul>
-                        <li>Heures : <t t-esc="bloc.total_hours"/></li>
-                        <li>ECTS : <t t-esc="bloc.total_credits"/></li>
-                    </ul>
-                    <hr/>  
                 </div>
             </div>    
         </div>
